# Plotly_Dash_Dashboards

./: .gitignore  README.md  pyproject.toml
01-Plotly_Basics/: 01-basics.ipynb  01-plotly_basics.py
01-Plotly_Basics_Charts/: generate_folders.py
01-Plotly_Basics_Charts/01-Bar_Chart/: 01-basics.ipynb  01-plotly_basics copy.py  01-plotly_basics-v2.ipynb  01-plotly_basics.ipynb  01-plotly_basics.py
01-Plotly_Basics_Charts/02-Line_Chart/: 01-Line_Chart.ipynb  01-Line_Chart.py  02-Line_Chart.ipynb  02-Line_Chart.md  02-Line_Chart.py
01-Plotly_Basics_Charts/03-Scatter_Plot/: 02-Scatter_Plot.ipynb  02-Scatter_Plot.py  03-scatterplot.py
01-Plotly_Basics_Charts/04-Pie_Chart/: 04-pie_plots copy.ipynb  04-pie_plots.ipynb  04-pie_plots.py
01-Plotly_Basics_Charts/05-Bubble_Chart/: 05-bubble_chart.ipynb  05-bubble_charts copy.ipynb  05-bubble_charts copy.py  05-bubble_charts.ipynb  05-bubble_charts.py
01-Plotly_Basics_Charts/06-Dot_Plot/: 06-dot_plots.py
01-Plotly_Basics_Charts/07-Filled_Area_Plot/: 07-filled_area.py  filled_area.ipynb  test.py
01-Plotly_Basics_Charts/08-Horizontal_Bar_Chart/: 08-Horizontal_Bar_Chart copy.ipynb  08-Horizontal_Bar_Chart.ipynb  08-Horizontal_Bar_Chart.py
01-Plotly_Basics_Charts/09-Gantt_Chart/: Gantt_Chart.ipynb  Gantt_Chart.py
01-Plotly_Basics_Charts/10-Sunburst_Chart/: sunburst copy.py  sunburst.ipynb
01-Plotly_Basics_Charts/11-Table copy/: 11-tables.ipynb  11-tables.py  plotly_table_tutorial-4.ipynb  plotly_table_tutorial.ipynb  plotly_table_tutorial_Version2.ipynb
cd/: extract-v2.py  extract.py  extracted_code.py
(+28 files in other folders)
