[project]
name = "plotly-dash-dashboards"
version = "0.1.0"
description = ""
authors = [
    {name = "James",email = "jamesbrendamour7@yahoo.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "plotly (>=5.24.1,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
